// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Polkadot Asset Hub Nomination Pools > nomination pool creation with insufficient funds > create nomination pool with insufficient funds events 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x08000000",
          "index": 80,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 3000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Asset Hub Nomination Pools > nomination pool double join test: an account can only ever be in one pool at a time > join nomination pool events 1`] = `
[
  {
    "data": {
      "amount": 10000000000,
    },
    "method": "Bonded",
    "section": "staking",
  },
  {
    "data": {
      "bonded": 10000000000,
      "joined": true,
      "member": "14HSc1dP8PQkm8uTVfTwp38ZeHwf6fxyst5WEC7EWYetHdz",
    },
    "method": "Bonded",
    "section": "nominationPools",
  },
]
`;

exports[`Polkadot Asset Hub Nomination Pools > nomination pool double join test: an account can only ever be in one pool at a time > join second nomination pool events 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x04000000",
          "index": 80,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 2000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Asset Hub Nomination Pools > nomination pool global config test > setting global nomination pool configs with signed origin 1`] = `
[
  {
    "data": {
      "dispatchError": "BadOrigin",
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 1000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Asset Hub Nomination Pools > nomination pool global config test > system events 1`] = `
[
  {
    "data": {
      "globalMaxCommission": "10.00%",
      "maxMembers": 2,
      "maxMembersPerPool": 2,
      "maxPools": 2,
      "minCreateBond": "(rounded 5000000000000)",
      "minJoinBond": "(rounded 10000000000)",
    },
    "method": "GlobalParamsUpdated",
    "section": "nominationPools",
  },
]
`;

exports[`Polkadot Asset Hub Nomination Pools > nomination pool global config test > system events 2`] = `
[
  {
    "data": {
      "globalMaxCommission": "10.00%",
      "maxMembers": 3,
      "maxMembersPerPool": 3,
      "maxPools": 3,
      "minCreateBond": "(rounded 5000000000000)",
      "minJoinBond": "(rounded 10000000000)",
    },
    "method": "GlobalParamsUpdated",
    "section": "nominationPools",
  },
]
`;

exports[`Polkadot Asset Hub Nomination Pools > nomination pool lifecycle test > bond extra funds events 1`] = `
[
  {
    "data": {
      "amount": "(rounded 5000000000000)",
    },
    "method": "Bonded",
    "section": "staking",
  },
  {
    "data": {
      "bonded": "(rounded 5000000000000)",
      "joined": false,
      "member": "14HSc1dP8PQkm8uTVfTwp38ZeHwf6fxyst5WEC7EWYetHdz",
    },
    "method": "Bonded",
    "section": "nominationPools",
  },
]
`;

exports[`Polkadot Asset Hub Nomination Pools > nomination pool lifecycle test > chill events 1`] = `
[
  {
    "data": {},
    "method": "Chilled",
    "section": "staking",
  },
  {
    "data": {
      "caller": "1TUmpQQUiXWobQcoUMcqxbAuw6PW9KQaKAZe3bjv3fFaWSy",
    },
    "method": "PoolNominatorChilled",
    "section": "nominationPools",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 1000000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
]
`;

exports[`Polkadot Asset Hub Nomination Pools > nomination pool lifecycle test > claim commission events 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x1a000000",
          "index": 80,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 800000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Asset Hub Nomination Pools > nomination pool lifecycle test > commission alteration events 1`] = `
[
  {
    "data": {
      "current": [
        "0.10%",
        "14HSc1dP8PQkm8uTVfTwp38ZeHwf6fxyst5WEC7EWYetHdz",
      ],
    },
    "method": "PoolCommissionUpdated",
    "section": "nominationPools",
  },
  {
    "data": {
      "maxCommission": "1.00%",
    },
    "method": "PoolMaxCommissionUpdated",
    "section": "nominationPools",
  },
  {
    "data": {
      "changeRate": {
        "maxIncrease": "100.00%",
        "minDelay": 10,
      },
    },
    "method": "PoolCommissionChangeRateUpdated",
    "section": "nominationPools",
  },
  {
    "data": {
      "permission": "Permissionless",
    },
    "method": "PoolCommissionClaimPermissionUpdated",
    "section": "nominationPools",
  },
]
`;

exports[`Polkadot Asset Hub Nomination Pools > nomination pool lifecycle test > create nomination pool events 1`] = `
[
  {
    "data": {
      "amount": 5000000000000,
    },
    "method": "Bonded",
    "section": "staking",
  },
  {
    "data": {
      "depositor": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
    },
    "method": "Created",
    "section": "nominationPools",
  },
  {
    "data": {
      "bonded": 5000000000000,
      "joined": true,
      "member": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
    },
    "method": "Bonded",
    "section": "nominationPools",
  },
]
`;

exports[`Polkadot Asset Hub Nomination Pools > nomination pool lifecycle test > join nomination pool events 1`] = `
[
  {
    "data": {
      "amount": 5000000000000,
    },
    "method": "Bonded",
    "section": "staking",
  },
  {
    "data": {
      "bonded": 5000000000000,
      "joined": true,
      "member": "14HSc1dP8PQkm8uTVfTwp38ZeHwf6fxyst5WEC7EWYetHdz",
    },
    "method": "Bonded",
    "section": "nominationPools",
  },
]
`;

exports[`Polkadot Asset Hub Nomination Pools > nomination pool lifecycle test > nomination pool validator selection events 1`] = `
[
  {
    "data": {
      "caller": "1TUmpQQUiXWobQcoUMcqxbAuw6PW9KQaKAZe3bjv3fFaWSy",
    },
    "method": "PoolNominationMade",
    "section": "nominationPools",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 2000000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
]
`;

exports[`Polkadot Asset Hub Nomination Pools > nomination pool lifecycle test > set state events 1`] = `
[
  {
    "data": {
      "newState": "Blocked",
    },
    "method": "StateChanged",
    "section": "nominationPools",
  },
]
`;

exports[`Polkadot Asset Hub Nomination Pools > nomination pool lifecycle test > set state to destroying events 1`] = `
[
  {
    "data": {
      "newState": "Destroying",
    },
    "method": "StateChanged",
    "section": "nominationPools",
  },
]
`;

exports[`Polkadot Asset Hub Nomination Pools > nomination pool lifecycle test > unbond (depositor) events 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x08000000",
          "index": 80,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 2000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Asset Hub Nomination Pools > nomination pool lifecycle test > unbond (kick) events 1`] = `
[
  {
    "data": {
      "amount": 5000000000000,
    },
    "method": "Unbonded",
    "section": "staking",
  },
  {
    "data": {
      "balance": 5000000000000,
      "member": "14HSc1dP8PQkm8uTVfTwp38ZeHwf6fxyst5WEC7EWYetHdz",
      "points": 5000000000000,
    },
    "method": "Unbonded",
    "section": "nominationPools",
  },
]
`;

exports[`Polkadot Asset Hub Nomination Pools > nomination pool lifecycle test > unbond events 1`] = `
[
  {
    "data": {
      "amount": "(rounded 5000000000000)",
    },
    "method": "Unbonded",
    "section": "staking",
  },
  {
    "data": {
      "balance": "(rounded 5000000000000)",
      "member": "14HSc1dP8PQkm8uTVfTwp38ZeHwf6fxyst5WEC7EWYetHdz",
      "points": "(rounded 5000000000000)",
    },
    "method": "Unbonded",
    "section": "nominationPools",
  },
]
`;

exports[`Polkadot Asset Hub Nomination Pools > nomination pool lifecycle test > update roles events 1`] = `
[
  {
    "data": {
      "bouncer": "15Y1VYcCkzD91e5hzAW36wynBfh3inNzzwmUYF9gtm6NZwzi",
      "nominator": "1TUmpQQUiXWobQcoUMcqxbAuw6PW9KQaKAZe3bjv3fFaWSy",
      "root": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
    },
    "method": "RolesUpdated",
    "section": "nominationPools",
  },
]
`;

exports[`Polkadot Asset Hub Nomination Pools > nomination pool metadata test > create nomination pool events 1`] = `
[
  {
    "data": {
      "amount": 5000000000000,
    },
    "method": "Bonded",
    "section": "staking",
  },
  {
    "data": {
      "depositor": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
    },
    "method": "Created",
    "section": "nominationPools",
  },
  {
    "data": {
      "bonded": 5000000000000,
      "joined": true,
      "member": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
    },
    "method": "Bonded",
    "section": "nominationPools",
  },
]
`;

exports[`Polkadot Asset Hub Nomination Pools > nomination pool metadata test > set metadata events 1`] = `
[
  {
    "data": {
      "caller": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
    },
    "method": "MetadataUpdated",
    "section": "nominationPools",
  },
]
`;

exports[`Polkadot Asset Hub Nomination Pools > nomination pools update roles test > update pool roles via scheduler pallet 1`] = `
[
  {
    "event": {
      "data": [
        "1TUmpQQUiXWobQcoUMcqxbAuw6PW9KQaKAZe3bjv3fFaWSy",
        "14HSc1dP8PQkm8uTVfTwp38ZeHwf6fxyst5WEC7EWYetHdz",
        "15Y1VYcCkzD91e5hzAW36wynBfh3inNzzwmUYF9gtm6NZwzi",
      ],
      "index": "0x5008",
    },
    "phase": {
      "initialization": null,
    },
    "topics": [],
  },
]
`;

exports[`Polkadot Asset Hub Nomination Pools > nomination pools update roles test > update roles events 1`] = `
[
  {
    "data": {
      "bouncer": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
      "nominator": "15Y1VYcCkzD91e5hzAW36wynBfh3inNzzwmUYF9gtm6NZwzi",
      "root": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
    },
    "method": "RolesUpdated",
    "section": "nominationPools",
  },
]
`;

exports[`Polkadot Asset Hub Nomination Pools > nomination pools update roles test > update roles failure events 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x11000000",
          "index": 80,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 500000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Asset Hub Nomination Pools > nomination pools update roles test > update roles remove self events 1`] = `
[
  {
    "data": {
      "bouncer": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
      "nominator": "15Y1VYcCkzD91e5hzAW36wynBfh3inNzzwmUYF9gtm6NZwzi",
      "root": null,
    },
    "method": "RolesUpdated",
    "section": "nominationPools",
  },
]
`;
